apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
void uniffi_ant_ffi_fn_free_client(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_get_public(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_ant_ffi_fn_method_client_archive_put_public(void*_Nonnull ptr, void*_Nonnull archive, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_chunk_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_chunk_put(void*_Nonnull ptr, RustBuffer data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_data_cost(void*_Nonnull ptr, RustBuffer data
);
uint64_t uniffi_ant_ffi_fn_method_client_data_get(void*_Nonnull ptr, void*_Nonnull data_map
);
uint64_t uniffi_ant_ffi_fn_method_client_data_get_public(void*_Nonnull ptr, RustBuffer address_hex
);
uint64_t uniffi_ant_ffi_fn_method_client_data_put(void*_Nonnull ptr, RustBuffer data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_data_put_public(void*_Nonnull ptr, RustBuffer data, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_file_cost(void*_Nonnull ptr, RustBuffer path, int8_t follow_symlinks, int8_t include_hidden
);
uint64_t uniffi_ant_ffi_fn_method_client_file_download(void*_Nonnull ptr, void*_Nonnull data_map, RustBuffer path
);
uint64_t uniffi_ant_ffi_fn_method_client_file_download_public(void*_Nonnull ptr, void*_Nonnull address, RustBuffer path
);
uint64_t uniffi_ant_ffi_fn_method_client_file_upload(void*_Nonnull ptr, RustBuffer path, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_file_upload_public(void*_Nonnull ptr, RustBuffer path, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_put(void*_Nonnull ptr, void*_Nonnull entry, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_put(void*_Nonnull ptr, void*_Nonnull pointer, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_register_create(void*_Nonnull ptr, void*_Nonnull owner, RustBuffer value, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_register_get(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_ant_ffi_fn_method_client_register_update(void*_Nonnull ptr, void*_Nonnull owner, RustBuffer value, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_scratchpad_put(void*_Nonnull ptr, void*_Nonnull scratchpad, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_get_user_data(void*_Nonnull ptr, void*_Nonnull key
);
uint64_t uniffi_ant_ffi_fn_method_client_vault_put_user_data(void*_Nonnull ptr, void*_Nonnull key, RustBuffer payment, void*_Nonnull user_data
);