csharp/AntFfi/Native/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_free_client")]
    public static extern void FreeClient(IntPtr ptr, ref RustCallStatus status);

    #endregion

    #region Client - Data Operations (Async)

    /// <summary>
    /// Async: Stores public data on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_data_put_public")]
    public static extern ulong ClientDataPutPublic(IntPtr ptr, RustBuffer data, RustBuffer payment);

    /// <summary>
    /// Async: Retrieves public data from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_data_get_public")]
    public static extern ulong ClientDataGetPublic(IntPtr ptr, RustBuffer addressHex);

    /// <summary>
    /// Async: Stores private (encrypted) data on the network.
    /// Returns a DataMapChunk that can be used to retrieve the data.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_data_put")]
    public static extern ulong ClientDataPut(IntPtr ptr, RustBuffer data, RustBuffer payment);

    /// <summary>
    /// Async: Retrieves private (encrypted) data from the network using a DataMapChunk.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_data_get")]
    public static extern ulong ClientDataGet(IntPtr ptr, IntPtr dataMapChunk);

    /// <summary>
    /// Async: Estimates the cost to store data on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_data_cost")]
    public static extern ulong ClientDataCost(IntPtr ptr, RustBuffer data);

    #endregion

    #region Client - File Operations (Async)

    /// <summary>
    /// Async: Uploads a file to the network as public data.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_file_upload_public")]
    public static extern ulong ClientFileUploadPublic(IntPtr ptr, RustBuffer filePath, RustBuffer payment);

    /// <summary>
    /// Async: Downloads a file from the network (public data).
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_file_download_public")]
    public static extern ulong ClientFileDownloadPublic(IntPtr ptr, IntPtr address, RustBuffer destPath);

    /// <summary>
    /// Async: Uploads a file to the network as private (encrypted) data.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_file_upload")]
    public static extern ulong ClientFileUpload(IntPtr ptr, RustBuffer filePath, RustBuffer payment);

    /// <summary>
    /// Async: Downloads a file from the network (private data).
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_file_download")]
    public static extern ulong ClientFileDownload(IntPtr ptr, IntPtr dataMapChunk, RustBuffer destPath);

    /// <summary>
    /// Async: Estimates the cost to upload a file to the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_file_cost")]
    public static extern ulong ClientFileCost(IntPtr ptr, RustBuffer filePath, sbyte followSymlinks, sbyte includeHidden);

    #endregion

    #region Client - Chunk Operations (Async)

    /// <summary>
    /// Async: Stores a chunk on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_chunk_put")]
    public static extern ulong ClientChunkPut(IntPtr ptr, RustBuffer data, RustBuffer payment);

    /// <summary>
    /// Async: Retrieves a chunk from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_chunk_get")]
    public static extern ulong ClientChunkGet(IntPtr ptr, IntPtr address);

    #endregion

    #region Client - Pointer Operations (Async)

    /// <summary>
    /// Async: Retrieves a pointer from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_pointer_get")]
    public static extern ulong ClientPointerGet(IntPtr ptr, IntPtr address);

    /// <summary>
    /// Async: Stores a pointer on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_pointer_put")]
    public static extern ulong ClientPointerPut(IntPtr ptr, IntPtr pointer, RustBuffer payment);

    #endregion

    #region Client - GraphEntry Operations (Async)

    /// <summary>
    /// Async: Retrieves a graph entry from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_graph_entry_get")]
    public static extern ulong ClientGraphEntryGet(IntPtr ptr, IntPtr address);

    /// <summary>
    /// Async: Stores a graph entry on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_graph_entry_put")]
    public static extern ulong ClientGraphEntryPut(IntPtr ptr, IntPtr entry, RustBuffer payment);

    #endregion

    #region Client - Scratchpad Operations (Async)

    /// <summary>
    /// Async: Retrieves a scratchpad from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_scratchpad_get")]
    public static extern ulong ClientScratchpadGet(IntPtr ptr, IntPtr address);

    /// <summary>
    /// Async: Stores a scratchpad on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_scratchpad_put")]
    public static extern ulong ClientScratchpadPut(IntPtr ptr, IntPtr scratchpad, RustBuffer payment);

    #endregion

    #region Client - Register Operations (Async)

    /// <summary>
    /// Async: Retrieves a register value from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_register_get")]
    public static extern ulong ClientRegisterGet(IntPtr ptr, IntPtr address);

    /// <summary>
    /// Async: Creates a new register on the network.
    /// Rust signature: register_create(owner: Arc&lt;SecretKey&gt;, value: Vec&lt;u8&gt;, payment: PaymentOption)
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_register_create")]
    public static extern ulong ClientRegisterCreate(IntPtr ptr, IntPtr owner, RustBuffer value, RustBuffer payment);

    /// <summary>
    /// Async: Updates an existing register on the network.
    /// Rust signature: register_update(owner: Arc&lt;SecretKey&gt;, value: Vec&lt;u8&gt;, payment: PaymentOption)
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_register_update")]
    public static extern ulong ClientRegisterUpdate(IntPtr ptr, IntPtr owner, RustBuffer value, RustBuffer payment);

    #endregion

    #region Client - Vault Operations (Async)

    /// <summary>
    /// Async: Retrieves user data from a vault.
    /// Rust signature: vault_get_user_data(key: Arc&lt;VaultSecretKey&gt;)
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_vault_get_user_data")]
    public static extern ulong ClientVaultGetUserData(IntPtr ptr, IntPtr secretKey);

    /// <summary>
    /// Async: Stores user data in a vault.
    /// Rust signature: vault_put_user_data(key: Arc&lt;VaultSecretKey&gt;, payment: PaymentOption, user_data: Arc&lt;UserData&gt;)
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_vault_put_user_data")]
    public static extern ulong ClientVaultPutUserData(IntPtr ptr, IntPtr secretKey, RustBuffer payment, IntPtr userData);

    #endregion

    #region Client - Archive Operations (Async)

    /// <summary>
    /// Async: Retrieves a public archive from the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_archive_get_public")]
    public static extern ulong ClientArchiveGetPublic(IntPtr ptr, IntPtr address);

    /// <summary>
    /// Async: Stores a public archive on the network.
    /// </summary>
    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "uniffi_ant_ffi_fn_method_client_archive_put_public")]
    public static extern ulong ClientArchivePutPublic(IntPtr ptr, IntPtr archive, RustBuffer payment);

    #endregion
}
